; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_exti.c_EXTI_GetITStatus.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_exti.c_EXTI_GetITStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@RESET = common dso_local global i64 0, align 8
@EXTI = common dso_local global %struct.TYPE_2__* null, align 8
@SET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @EXTI_GetITStatus(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i64, i64* @RESET, align 8
  store i64 %5, i64* %3, align 8
  store i32 0, i32* %4, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @IS_GET_EXTI_LINE(i32 %6)
  %8 = call i32 @assert_param(i32 %7)
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @EXTI, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %2, align 4
  %13 = and i32 %11, %12
  store i32 %13, i32* %4, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @EXTI, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %2, align 4
  %18 = and i32 %16, %17
  %19 = load i64, i64* @RESET, align 8
  %20 = trunc i64 %19 to i32
  %21 = icmp ne i32 %18, %20
  br i1 %21, label %22, label %29

22:                                               ; preds = %1
  %23 = load i32, i32* %4, align 4
  %24 = load i64, i64* @RESET, align 8
  %25 = trunc i64 %24 to i32
  %26 = icmp ne i32 %23, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i64, i64* @SET, align 8
  store i64 %28, i64* %3, align 8
  br label %31

29:                                               ; preds = %22, %1
  %30 = load i64, i64* @RESET, align 8
  store i64 %30, i64* %3, align 8
  br label %31

31:                                               ; preds = %29, %27
  %32 = load i64, i64* %3, align 8
  ret i64 %32
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_GET_EXTI_LINE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
